# swe-mockup

./: .gitignore  .gitmodules  Cargo.toml  README.md
matlab/: benchmark_multi.m  benchmark_single.m  halfSandwichWald.m
src/: lib.rs
